# EdgeCloudApproximate

./: .Dockerignore  .dockerignore  .gitignore  Dockerfile_edge  Dockerfile_k8s_edge  Dockerfile_k8s_producer  Dockerfile_kafka  Dockerfile_spark  Network.md  README.md  docker-compose.yml
Kafka_aggregator/Kafka-csv-producer/CSVgenerator/: dependency-reduced-pom.xml  pom.xml
Kafka_aggregator/Kafka-csv-producer/CSVgenerator/src/main/java/com/unibo/beans/: Nyc.java  Shenzhen.java
cloud_analytics/: README.md  main.py  main2.py  main3.py  main4.py  main5.py  sparkStructuredStreaming_kafka_OnlineSampling-stratified-Shenzhen-2-24-2023.ipynb
data/china/neighborhood/: shenzhen_converted.geojson
docker-startup-scripts/: get_lastest.sh  startup-edge.sh  startup-kafka.sh  startup-spark.sh
flask_data_viz/: .gitignore  geomap.py  get_lastest.sh  main.py  requirements.txt  test.csv
flask_data_viz/templates/: index.html  waiting.html
k8s/: edge-1-deployment.yaml  kafka-deployment.yaml  kafka-service.yaml  spark-claim0-persistentvolumeclaim.yaml  spark-deployment.yaml  spark-service.yaml  spark-worker-claim0-persistentvolumeclaim.yaml  spark-worker-deployment.yaml
kafka-edge-bin/: Cargo.toml
kafka-edge-bin/config-proc-macros/: Cargo.toml
kafka-edge-bin/config-proc-macros/src/: lib.rs
kafka-edge-bin/kafka-edge-rs/: Cargo.toml
kafka-edge-bin/kafka-edge-rs/src/: args.rs  config.rs  geospatial.rs  kafka_producer.rs  main.rs  utils.rs
kafka-edge-bin/kafka-edge-rs/src/config/: constants.rs  errors.rs  macros.rs  structs.rs  utils.rs
kafka-edge-bin/kafka-edge-rs/src/kafka_producer/: message.rs  strategies.rs  utils.rs
kafka-edge-bin/kafka-edge-rs/src/subcommands/: config.rs  topic.rs
kafka-edge-rs/: Cargo.toml
kafka-edge-rs/src/: args.rs  config.rs  main.rs  subcommands.rs
kafka-edge-rs/src/config/: constants.rs  structs.rs  utils.rs
kafka-edge-rs/src/kafka_producer/: strategies.rs
kafka-edge-rs/src/subcommands/: config.rs
kafka-producer-rs/: .gitignore  Cargo.toml  producer_config_template.toml
kafka-producer-rs/src/: args.rs  config.rs  kafka_producer.rs  main.rs  subcommands.rs  utils.rs
kafka-producer-rs/src/config/: errors.rs  structs.rs  utils.rs
kafka-producer-rs/src/kafka_producer/: errors.rs  message.rs
kafka-producer-rs/src/subcommands/: create_topic.rs  delete_topic.rs  edit_config.rs  errors.rs  toml_template.rs  utils.rs
kafka-rs-configs/: kafka_edge_config-edge.toml  kafka_edge_config-kafka.toml  producer_config-TEMPLATE.toml  startup-kafka.sh  startup-spark.sh
new_sampler/: NOTES.md  main.py  requirements.txt
preprocessing/: points_and_geohash_covering.ipynb
strat_sampler/: README.md  main.py  requirements.txt
strat_sampler/src/: argparser.py
terraform/: .gitignore  README.md  cluster.tf  dev.tfvars  images.tf  locals.tf  providers.tf  variables.tf  versions.tf
terraform/modules/kafka/: main.tf  variables.tf
terraform/modules/spark/: locals.tf  main.tf  variables.tf  versions.tf
terraform/modules/workload/: locals.tf  main.tf  producer.tf  providers.tf  variables.tf
wiki/: Kafka.md  Network.md
(+11 files in other folders)
