[package]
name = "kafka-producer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geohash = "0.13.0"
kafka = "0.9.0"
rand = "0.8.5"
serde = { "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
