[package]
name = "kafka-producer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
csv = "1.1"
geohash = "0.13.0"
kafka = "0.9.0"
rand = "0.8.5"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
toml = "0.7.3"
whoami = "1.4.0"
