[package]
name = "kafka-edge-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-proc-macros = { version = "0.1.0", path = "../config-proc-macros" }
clap = { version = "4.1.13", features = ["derive"] }
kafka = "0.9.0"
rand = "0.8.5"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
toml = "0.7.3"
whoami = "1.4.0"
geohash = "0.13.0"
geojson = { version =  "0.24.0", features=["geo-types"] }
geo = "0.24.1"
geo-types = "0.7.9"
log = "0.4.17"
env_logger = "0.10.0"
