[package]
name = "kafka-edge-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-proc-macros = { version = "0.1.0", path = "../config-proc-macros" }
clap = { version = "4.5", features = ["derive"] }
kafka = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
whoami = "1.5"
geohash = "0.13.1"
geojson = { version =  "0.24", features=["geo-types"] }
geo = "0.28"
geo-types = "0.7"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
